GetTime v1.1 | Discord Bot v1.1 | 
Added:
  * Added a donation link on the about page
  * Added a Global date system for the API's (Read more in the API docs)
  * Added a error handler/logger for when something is missing in settings.json
  * Added a PWA! This allows you to "install" GetTime to your device
  * Added a warning message on the beta /about page, telling the user that they are on the beta branch
  * Added robots.txt, security.txt and gpg.txt
Changed:
  * Restructured all CSS files to SCSS
  * Restructured the code that handles switching to/from darkmode
  * No longer minimizing CSS and JS (It was a pain in the ass to keep up)
  * Restructured some CSS stuff with variables.
Fixed:
  * Fixed the background color on the drop down menu on desktop with darkmode being a bit white at the edges, due to some css issues
  * Fixed the "GetTime App" button displaying the wrong color on mobile
Sidenotes:

-----------------------------------------------------------------------------------------------------------------------------------------------------

GetTime v1.0 | Discord Bot v1.0 | 2021-05-11

Added:
  * Added a "!gt v" command to the Discord Bot, that simply states the current version of the bot
  * Added a Google Form where users can request their school to be added to GetTime.
  * Added min.sh (Same as min.bat, but in shell form)
  * Added Tullinge Gymnasium and Sjödalsgymnasiet
  * Added/brought back fullscreen mode

Changed:
  * Removed the "logger" class from main.py and reverted back to using logging like normal people
  * Redesigned the way the dropdown button text changes when the screen becomes to small
  * Removed the drop shadow from the schedule
  * Restructured some code for the URI manipulation
  * Moved cache settings to settings.json
  * Moved menus to menus.json
  * Changed some debug features

Fixed:
  * Fixed a bug where the Discord Bot would respond to any prefix that started with its own